bobcat (3.12.00)

  * Added class Exception, obsoleting class Errno. 

  * All occurrences of Errno in Bobcat were replaced by Exception

  * The class tt(BigInt) received several new member diophantus (for long long
    values and BigInt values). See the bigint(3bobcat) man page for details. 

  * Added new class PrimeFactors, factorizing BigInt values.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Feb 2013 11:43:52 +0100

bobcat (3.11.01)

  * Repaired incorrect #include "../gs/gs" in glob/glob

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 27 Oct 2012 16:02:58 +0200

bobcat (3.11.00)

  * Added OFdStreambuf constructor and open member expecting a std::string
    const & defining the name of the stream to receive the filtered
    information. 

  * Glob offers an additional constructor allowing users to specify the type
    of directory entries they are interested in (e.g., DIRECTORY,
    REGULAR_FILE, or any bitor-ed combination. The flags defined in Bobcat's
    Stat class are identical to those that are available in Glob.

  * Glob now uses the pimpl design with all its public members.

  * Several man-pages were updated, mostly textual corrections.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 27 Oct 2012 12:14:35 +0200

bobcat (3.10.01)

  * Library constrction scripts cleanup so it supports environment variables:
    LDFLAGS, CPPFLAGS, CXXFLAGS and CXX

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 22 Jul 2012 13:58:01 +0200

bobcat (3.10.00)
    
  * Added class Signal, allowing context to be used by programs receiving
    signals. 

  * Added to the class User members (egroupid, euserid) to retrieve the
    effective group and user-ids and a member (inGroup) to determine whether
    the user is a member of a specified group.

  * Added to the class Stat a member (access) returning true if specified
    read, write and/or execute permissions are granted for a provided
    FBB::User object.
