@@ -18,8 +18,9 @@ The label IUO does not refer to a class but to functions defined in the FBB
 namespace for internal use only. They are declared in the bobcat/iuo header.
 
 Entries below, tagged with `(cont)' were mentioned earlier in the next
-hierarchy. Entries tagged with (Obs) are obsolete, and will be removed in a
-future relase: 
+hierarchy. Entries tagged with (Obs) are obsolete and should no longer be
+used. 
+
 
 0   X2a     Hash   Hostent  TypeTrait   Swap     Indent     ReadLineHistory
                                 |                
@@ -28,24 +29,24 @@ future relase:
                         binops       repeat              
                   
 
-0   MultiStreambuf     SyslogBuf      RandBuffer        ReadLineBuf
-                           |               |                 |        
-                      SyslogStream     IRandStream      ReadLineStream
-                                           |
-                                           |
-0   DateTime     Exception                 |                
-       |             |                     |                      
-       |       +-----+-----+---+--+        |
-       |       |     |         |  |        |
-       |      User Signal      |  +---+----+                      
-       |       |               |      |                           
-       |       |     +---------+      |                           
-       |       |     |         |      |                           
-       |       |  BigInt       |      |                           
-       |       |     |         |      |                           
-       |       +-----+         |      |                           
-       |       |     |         |      |                           
-       +-------+     |         |  EncryptBuf                      
+0   MultiStreambuf     SyslogBuf       ReadLineBuf     RandBuffer    
+                           |                |              |        
+                      SyslogStream     ReadLineStream  IRandStream  
+                                                           |
+                                                           |
+0   DateTime     Exception                                 |
+       |             |                                     |                
+       |       +-----+---------+------+----------+         |
+       |       |     |         |      |          |         |
+       |      User Signal      |      |          +----+----+
+       |       |               |      |               |
+       |       |     +---------+     Mbuf        EncryptBuf
+       |       |     |         |      |                              
+       |       |  BigInt       |    Mstream               
+       |       |     |         |                                  
+       |       +-----+         |                                  
+       |       |     |         |                                  
+       +-------+     |         |             
        |             |         |                  
        |        PrimeFactors   |                  
        |                       |                  
