@@ -111,7 +111,9 @@ tt(std:streambuf); but it also offers a facility for classes deriving from
 bf(OFdStreambuf). This facility is listed here.
     itemization(
     itb(int pSync())
-        The contents of the bf(OFdStreambuf)'s internal buffer flushed.
+        The contents of the bf(OFdStreambuf)'s internal buffer are flushed. If
+        writing the contents to the file descriptor fails, a warning message
+        is displayed to the standard error stream.
     )
 
 manpagesection(EXAMPLE)
