@@ -51,8 +51,8 @@ class OFdStreambuf: public std::streambuf
         int pSync();
 
     private:
-        virtual int sync();
-        virtual int overflow(int c);
+        int sync() override;
+        int overflow(int c) override;
 
         void cleanup(Mode mode);
 };
@@ -70,6 +70,11 @@ inline void OFdStreambuf::close()
 inline int OFdStreambuf::fd() const
 {
     return d_fd;
+}
+
+inline int OFdStreambuf::pSync()
+{
+    return sync();
 }
 
 } // FBB
