@@ -9,7 +9,9 @@ bobcat (3.12.00)
 
   * Added new class PrimeFactors, factorizing BigInt values.
 
- -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Feb 2013 11:43:52 +0100
+  * Added missing OFdStreambuf::pSync member.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sun, 24 Feb 2013 13:09:38 +0100
 
 bobcat (3.11.01)
 
